utoipa-gen/tests/snapshots/path_derive_axum_test__derive_path_query_params_with_named_struct_destructed.snap
---
source: utoipa-gen/tests/path_derive_axum_test.rs
expression: parameters
snapshot_kind: text
---
[
  {
    "in": "query",
    "name": "name",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
