utoipa-gen/tests/snapshots/path_derive_axum_test__get_todo_with_path_tuple.snap
---
source: utoipa-gen/tests/path_derive_axum_test.rs
expression: parameters
snapshot_kind: text
---
[
  {
    "description": "Person id",
    "in": "path",
    "name": "id",
    "required": true,
    "schema": {
      "type": "string"
    }
  },
  {
    "description": "Person name",
    "in": "path",
    "name": "name",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
