utoipa-gen/tests/snapshots/path_derive_axum_test__into_params_for_option_query_type.snap
---
source: utoipa-gen/tests/path_derive_axum_test.rs
expression: "operation.pointer(\"/parameters\")"
snapshot_kind: text
---
[
  {
    "description": "",
    "in": "query",
    "name": "id",
    "required": true,
    "schema": {
      "format": "int32",
      "minimum": 0,
      "type": "integer"
    }
  }
]
