utoipa-gen/tests/snapshots/path_derive_axum_test__path_param_single_arg_non_primitive_type_into_params.snap
---
source: utoipa-gen/tests/path_derive_axum_test.rs
expression: "operation.pointer(\"/parameters\")"
snapshot_kind: text
---
[
  {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
