utoipa-gen/tests/snapshots/path_derive_axum_test__path_with_path_query_body_resolved-2.snap
---
source: utoipa-gen/tests/path_derive_axum_test.rs
expression: "&operation.pointer(\"/requestBody\")"
snapshot_kind: text
---
{
  "content": {
    "application/json": {
      "schema": {
        "$ref": "#/components/schemas/Item"
      }
    }
  },
  "required": true
}
